{
  "version": 4,
  "terraform_version": "0.13.1",
  "serial": 182,
  "lineage": "bf938517-9df2-7fdc-63a8-22d53f6266a1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed9277fb7eb570c9",
            "arn": "arn:aws:ec2:us-east-1:914199416814:instance/i-0830ceb1e43721783",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0830ceb1e43721783",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "virginia-region-key-pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-087467939730c3fdc",
            "private_dns": "ip-10-0-1-244.ec2.internal",
            "private_ip": "10.0.1.244",
            "public_dns": "ec2-52-91-59-237.compute-1.amazonaws.com",
            "public_ip": "52.91.59.237",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-082bae6f672e46ba8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ccb2bf402ebd3ae2",
            "tags_all": {
              "Environment": "Test",
              "Owner": "TFProviders",
              "Project": "Test"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0323b2736b6f4a168"
            ]
          },
          "dependencies": [
            "aws_key_pair.virginia-region-key-pair",
            "aws_security_group.ssh-allowed",
            "aws_subnet.prod-subnet-public-1",
            "aws_vpc.prod-vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:914199416814:internet-gateway/igw-0e1f93730af36c5e8",
            "id": "igw-0e1f93730af36c5e8",
            "owner_id": "914199416814",
            "tags": {
              "Name": "prod-igw"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "prod-igw",
              "Owner": "TFProviders",
              "Project": "Test"
            },
            "vpc_id": "vpc-0c1f63ef142feec84"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-public-crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:914199416814:route-table/rtb-080bb3f1a4948a1a2",
            "id": "rtb-080bb3f1a4948a1a2",
            "owner_id": "914199416814",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e1f93730af36c5e8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-public-crt"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "prod-public-crt",
              "Owner": "TFProviders",
              "Project": "Test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1f63ef142feec84"
          },
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod-crta-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcf37c462de30915",
            "route_table_id": "rtb-080bb3f1a4948a1a2",
            "subnet_id": "subnet-0ccb2bf402ebd3ae2"
          },
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_route_table.prod-public-crt",
            "aws_subnet.prod-subnet-public-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-allowed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:914199416814:security-group/sg-0323b2736b6f4a168",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0323b2736b6f4a168",
            "ingress": [
              {
                "cidr_blocks": [
                  "182.70.16.204/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1234
              },
              {
                "cidr_blocks": [
                  "182.70.16.204/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "182.70.16.204/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "182.70.16.204/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220110210615675800000001",
            "name_prefix": "terraform-",
            "owner_id": "914199416814",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-allowed"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "ssh-allowed",
              "Owner": "TFProviders",
              "Project": "Test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1f63ef142feec84"
          },
          "dependencies": [
            "aws_vpc.prod-vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-subnet-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:914199416814:subnet/subnet-0ccb2bf402ebd3ae2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ccb2bf402ebd3ae2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "914199416814",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-subnet-public-1"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "prod-subnet-public-1",
              "Owner": "TFProviders",
              "Project": "Test"
            },
            "vpc_id": "vpc-0c1f63ef142feec84"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:914199416814:vpc/vpc-0c1f63ef142feec84",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09ad42fbb0c50ac8d",
            "default_route_table_id": "rtb-058a306cd4ae00a81",
            "default_security_group_id": "sg-079693e8024d33340",
            "dhcp_options_id": "dopt-0b3a1fd5ef5e3cc40",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c1f63ef142feec84",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-058a306cd4ae00a81",
            "owner_id": "914199416814",
            "tags": {
              "Name": "prod-vpc"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "prod-vpc",
              "Owner": "TFProviders",
              "Project": "Test"
            }
          }
        }
      ]
    }
  ]
}